--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name"           : "edp-watch",
     "description"    : "Package for edp watch.",
-    "version"        : "0.1.0-beta.1",
+    "version"        : "0.1.1-beta.1",
     "contributors"   : [
         {
             "name" : "firede",
@@ -22,6 +22,5 @@
     },
     "main"           : "index.js",
     "repository"     : "git://github.com/ecomfe/edp-watch",
-    "devDependencies": {
-    }
+    "devDependencies": {}
 }
