--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name"           : "edp-watch",
     "description"    : "Package for edp watch.",
-    "version"        : "0.1.1-beta.2",
+    "version"        : "0.1.2",
     "contributors"   : [
         {
             "name" : "firede",
@@ -14,11 +14,11 @@
     ],
     "dependencies"   : {
         "debug"         : "~0.7.3",
-        "chalk"         : "~0.3.0",
+        "chalk"         : "~0.4.0",
         "path-to-regexp": "~0.0.2",
         "tiny-lr"       : "~0.0.5",
         "fsmonitor"     : "~0.2.2",
-        "lodash"        : "~2.3.0"
+        "lodash"        : "~2.4.1"
     },
     "main"           : "index.js",
     "repository"     : "git://github.com/ecomfe/edp-watch",
